fix on mobile heading (#316)
* fix on mobile heading

--- a/src/app/components/landing/landing.scss
+++ b/src/app/components/landing/landing.scss
@@ -200,7 +200,10 @@
       min-height:356px;
     }
     .heading-over-video{
-      padding-top: 30px;
+      padding-right: 5%;
+    }
+    .sc-off-cta-platform {
+      padding: 10px 10px;
     }
   }
 }
